--- a/new.html
+++ b/new.html
@@ -16,6 +16,9 @@
 		
 		embedded_svc.settings.autoOpenPostChat = true;
 
+		
+		embedded_svc.settings.autoOpenPostChat = true;
+
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
