--- a/new.html
+++ b/new.html
@@ -16,8 +16,6 @@
 		
 		embedded_svc.settings.autoOpenPostChat = true;
 
-		
-		embedded_svc.settings.autoOpenPostChat = true;
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
@@ -39,16 +37,16 @@
 
 		embedded_svc.init(
 			'https://dellicm--moxiepoc.my.salesforce.com',
-			'https://moxiepoc-dellcommunities.cs14.force.com/chat',
+			'https://moxiepoc-dellcommunities.cs14.force.com',
 			gslbBaseURL,
 			'00Dc0000003lKkM',
-			'Survey_Chat',
+			'Perseus',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ord.salesforceliveagent.com/content',
 				deploymentId: '572c00000008Ol2',
-				buttonId: '573c00000008PEs',
+				buttonId: '573c00000008PF7',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ord.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Survey_Chat',
+				eswLiveAgentDevName: 'Perseus',
 				isOfflineSupportEnabled: false
 			}
 		);
