--- a/new.html
+++ b/new.html
@@ -13,9 +13,6 @@
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-		
-		embedded_svc.settings.autoOpenPostChat = true;
-
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
@@ -37,16 +34,16 @@
 
 		embedded_svc.init(
 			'https://dellicm--moxiepoc.my.salesforce.com',
-			'https://moxiepoc-dellcommunities.cs14.force.com',
+			'https://moxiepoc-dell.cs14.force.com',
 			gslbBaseURL,
 			'00Dc0000003lKkM',
-			'Perseus',
+			'Chat_Agent_Group',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ord.salesforceliveagent.com/content',
 				deploymentId: '572c00000008Ol2',
-				buttonId: '573c00000008PF7',
+				buttonId: '573c00000008PAR',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ord.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Perseus',
+				eswLiveAgentDevName: 'Chat_Agent_Group',
 				isOfflineSupportEnabled: false
 			}
 		);
