--- a/new.html
+++ b/new.html
@@ -31,6 +31,7 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
+embedded_svc.settings.autoOpenPostChat = true;
 
 		embedded_svc.init(
 			'https://dellicm--moxiepoc.my.salesforce.com',
