--- a/new.html
+++ b/new.html
@@ -1,73 +1,63 @@
 <style type='text/css'>
-	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #005290;
-		font-family: "Arial", sans-serif;
-	}
-	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #005290;
-	}
+              .embeddedServiceHelpButton .helpButton .uiButton {
+                             background-color: #005290;
+                             font-family: "Arial", sans-serif;
+              }
+              .embeddedServiceHelpButton .helpButton .uiButton:focus {
+                             outline: 1px solid #005290;
+              }
 </style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
-	
-	window.addEventListener("message", receiveMessage, false);
-function receiveMessage(event) {
-    var payload = event.data;
+              var initESW = function(gslbBaseURL) {
+                             embedded_svc.settings.displayHelpButton = true; //Or false
+                             embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+		             embedded_svc.settings.autoOpenPostChat = true;
 
-    if(payload && payload.type === "chasitor.sendMessage") {
-        embedded_svc.postMessage("chasitor.sendMessage", payload.message);
-    }
-};
-	
-	var initESW = function(gslbBaseURL) {
-		embedded_svc.settings.displayHelpButton = true; //Or false
-		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+                             //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+                             //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
+                             //embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+                             //embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
 
-		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+                             // Settings for Chat
+                             //embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+                                           // Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+                                           // Returns a valid button ID.
+                             //};
+                             //embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+                             //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+                             //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 
-		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+                             embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+                             embedded_svc.settings.entryFeature = 'LiveAgent';
 
-		// Settings for Chat
-		//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-			// Returns a valid button ID.
-		//};
-		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+                             embedded_svc.init(
+                                           'https://nosoftware-fun-5021.cs43.my.salesforce.com',
+                                           'https://sandbox-momentun0609.cs43.force.com/liveAgentSetupFlow',
+                                           gslbBaseURL,
+                                           '00D63000000UZho',
+                                           'Chat_Agents',
+                                           {
+                                                          baseLiveAgentContentURL: 'https://c.la1-c1cs-ph2.salesforceliveagent.com/content',
+                                                          deploymentId: '57263000000CgKp',
+                                                          buttonId: '57363000000CgTl',
+                                                          baseLiveAgentURL: 'https://d.la1-c1cs-ph2.salesforceliveagent.com/chat',
+                                                          eswLiveAgentDevName: 'Chat_Agents',
+                                                          isOfflineSupportEnabled: false
+                                           }
+                             );
+              };
 
-		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-		embedded_svc.settings.entryFeature = 'LiveAgent';
-
-		embedded_svc.init(
-			'https://customization-business-9969.cs10.my.salesforce.com',
-			'https://sandbox-customization-business-9969.cs10.force.com/liveAgentSetupFlow',
-			gslbBaseURL,
-			'00DJ0000003gVxk',
-			'test_group',
-			{
-				baseLiveAgentContentURL: 'https://c.la3-c1cs-phx.salesforceliveagent.com/content',
-				deploymentId: '572J00000008XqM',
-				buttonId: '573J00000008YiQ',
-				baseLiveAgentURL: 'https://d.la3-c1cs-phx.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'test_group',
-				isOfflineSupportEnabled: false
-			}
-		);
-	};
-
-	if (!window.embedded_svc) {
-		var s = document.createElement('script');
-		s.setAttribute('src', 'https://customization-business-9969.cs10.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-		s.onload = function() {
-			initESW(null);
-		};
-		document.body.appendChild(s);
-	} else {
-		initESW('https://service.force.com');
-	}
+              if (!window.embedded_svc) {
+                             var s = document.createElement('script');
+                             s.setAttribute('src', 'https://nosoftware-fun-5021.cs43.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+                             s.onload = function() {
+                                           initESW(null);
+                             };
+                             document.body.appendChild(s);
+              } else {
+                             initESW('https://service.force.com');
+              }
 </script>
