--- a/new.html
+++ b/new.html
@@ -1,63 +1,62 @@
 <style type='text/css'>
-              .embeddedServiceHelpButton .helpButton .uiButton {
-                             background-color: #005290;
-                             font-family: "Arial", sans-serif;
-              }
-              .embeddedServiceHelpButton .helpButton .uiButton:focus {
-                             outline: 1px solid #005290;
-              }
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #0063B8;
+		font-family: "Arial", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #0063B8;
+	}
 </style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
-              var initESW = function(gslbBaseURL) {
-                             embedded_svc.settings.displayHelpButton = true; //Or false
-                             embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-		             embedded_svc.settings.autoOpenPostChat = true;
+	var initESW = function(gslbBaseURL) {
+		embedded_svc.settings.displayHelpButton = true; //Or false
+		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
-                             //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-                             //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
-                             //embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-                             //embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
 
-                             // Settings for Chat
-                             //embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-                                           // Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-                                           // Returns a valid button ID.
-                             //};
-                             //embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-                             //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-                             //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+		// Settings for Chat
+		//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+			// Returns a valid button ID.
+		//};
+		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 
-                             embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-                             embedded_svc.settings.entryFeature = 'LiveAgent';
+		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+		embedded_svc.settings.entryFeature = 'LiveAgent';
 
-                             embedded_svc.init(
-                                           'https://nosoftware-fun-5021.cs43.my.salesforce.com',
-                                           'https://sandbox-momentun0609.cs43.force.com/liveAgentSetupFlow',
-                                           gslbBaseURL,
-                                           '00D63000000UZho',
-                                           'Chat_Agents',
-                                           {
-                                                          baseLiveAgentContentURL: 'https://c.la1-c1cs-ph2.salesforceliveagent.com/content',
-                                                          deploymentId: '57263000000CgKp',
-                                                          buttonId: '57363000000CgTl',
-                                                          baseLiveAgentURL: 'https://d.la1-c1cs-ph2.salesforceliveagent.com/chat',
-                                                          eswLiveAgentDevName: 'Chat_Agents',
-                                                          isOfflineSupportEnabled: false
-                                           }
-                             );
-              };
+		embedded_svc.init(
+			'https://dcsf--sit1.my.salesforce.com',
+			'https://sit1-dellicm-dell-na174.cs34.force.com/liveAgentSetupFlow',
+			gslbBaseURL,
+			'00D2f0000008esE',
+			'DELL_CONNECT_DEFAULT',
+			{
+				baseLiveAgentContentURL: 'https://c.la3-c1cs-ia2.salesforceliveagent.com/content',
+				deploymentId: '5722f0000004Czy',
+				buttonId: '5732f0000004DDg',
+				baseLiveAgentURL: 'https://d.la3-c1cs-ia2.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I2f00000000AGEAY_179601c8497',
+				isOfflineSupportEnabled: false
+			}
+		);
+	};
 
-              if (!window.embedded_svc) {
-                             var s = document.createElement('script');
-                             s.setAttribute('src', 'https://nosoftware-fun-5021.cs43.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-                             s.onload = function() {
-                                           initESW(null);
-                             };
-                             document.body.appendChild(s);
-              } else {
-                             initESW('https://service.force.com');
-              }
+	if (!window.embedded_svc) {
+		var s = document.createElement('script');
+		s.setAttribute('src', 'https://dcsf--sit1.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.onload = function() {
+			initESW(null);
+		};
+		document.body.appendChild(s);
+	} else {
+		initESW('https://service.force.com');
+	}
 </script>
